Add test code and Rubocop config

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,13 +2,25 @@ AllCops:
   TargetRubyVersion: 2.5
   NewCops: enable
 
+Layout/LineLength:
+  Max: 120
+
+Layout/SpaceInsideBlockBraces:
+  SpaceBeforeBlockParameters: false
+
+Metrics/AbcSize:
+  Max: 25
+
+Metrics/ParameterLists:
+  CountKeywordArgs: false
+
+Style/Alias:
+  Enabled: true
+  EnforcedStyle: prefer_alias_method
+
+Style/ParallelAssignment:
+  Enabled: false
+
 Style/StringLiterals:
   Enabled: true
   EnforcedStyle: double_quotes
-
-Style/StringLiteralsInInterpolation:
-  Enabled: true
-  EnforcedStyle: double_quotes
-
-Layout/LineLength:
-  Max: 120
