--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -5,6 +5,9 @@ AllCops:
 Layout/LineLength:
   Max: 120
 
+Layout/MultilineMethodCallIndentation:
+  EnforcedStyle: indented_relative_to_receiver
+
 Layout/SpaceInsideBlockBraces:
   SpaceBeforeBlockParameters: false
 
