--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -21,6 +21,9 @@ Style/Alias:
   Enabled: true
   EnforcedStyle: prefer_alias_method
 
+Style/FormatStringToken:
+  Enabled: false
+
 Style/ParallelAssignment:
   Enabled: false
 
